--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -26,3 +26,11 @@ jobs:
       - run: npm install -g bats
       - run: bats -v
       - run: node -v
+  check-go-version:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: '^1.20'
+      - run: go version
