--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -35,3 +35,8 @@ jobs:
           go-version: '^1.20'
       - run: go version
       - run: go run main.go
+      - run: echo test > upload.txt
+      - uses: actions/upload-artifact@v3
+        with:
+          name: upload-test
+          path: upload.txt
